Splitting client type attribute enum into 3 separate enums, representing the top level ClientModel fields, the extended attributes through the client_attributes table, and the composable fields on ClientRepresentation.
Signed-off-by: Patrick Jennings <pajennin@redhat.com>